# snglrtty

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  configuration.json
.github/workflows/: release.yml
aur/: PKGBUILD
src/: main.rs
