[package]
name = "snglrtty"
version = "0.1.0"
edition = "2024"
description = "Terminal audio visualizer — singularity in your TTY"
license = "MIT"
authors = ["Matthias Schlich"]

[package.metadata.deb]
maintainer = "Matthias Schlich"
copyright = "2026, Matthias Schlich"
depends = "libpulse0"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/snglrtty", dest = "/usr/bin/snglrtty", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/snglrtty/README.md", mode = "644" },
    { source = "LICENSE", dest = "/usr/share/licenses/snglrtty/LICENSE", mode = "644" },
]

[dependencies]
libpulse-simple-binding = "2.29.0"
libpulse-binding = "2.29.0"
terminal_size = "0.4.4"
clap = { version = "4.6.1", features = ["derive"] }
ctrlc = "3.4"
